--- a/transcriber/static/transcriber/css/min.css
+++ b/transcriber/static/transcriber/css/min.css
@@ -44,6 +44,29 @@ a:hover {
     text-align: center;
 }
 
+
+
+/* Forms */
+.container-lg {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
 h1 {
     color: #333;
 }
@@ -73,46 +96,9 @@ li {
     border-radius: 4px;
 }
 
-/* Footer */
-.footer {
-    background-color: #333;
-    color: white;
-    padding: 15px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer p {
-    margin: 5px 0;
-}
-
-.footer .social-media a {
-    color: white;
-    font-size: 20px;
-    margin: 0 10px;
-}
-
-/* Forms */
-.container-lg {
-    width: fit-content;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
 
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+
 
 form {
     margin-bottom: 20px;
@@ -140,6 +126,67 @@ button:disabled {
 p {
     flex-wrap: wrap;
 }
+
+
+
+
+
+.text-to-audio {
+    padding:  10px;
+
+}
+
+
+
+.back-link {
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    padding: 15px;
+    font-size: 15px;
+    font: 700;
+    border-radius: 10px;
+    color: #fff;
+    background-color: #333;
+}
+
+
+.back-link:hover {
+    font-size: 18px;
+    text-decoration: underline;
+    transition: 0.7s;
+    background-color: #fff;
+    color: #333;
+}
+
+
+
+/* Footer */
+.footer {
+    background-color: #333;
+    color: white;
+    padding: 15px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.footer p {
+    margin: 5px 0;
+}
+
+.footer .social-media a {
+    color: white;
+    font-size: 20px;
+    margin: 0 10px;
+}
+
+
 
 /* Responsive Design */
 @media (max-width: 768px) {
@@ -170,34 +217,4 @@ p {
         bottom: 0;
         width: 100%;overflow: hidden;
     }
-}
-
-
-
-.text-to-audio {
-    padding:  10px;
-
-}
-
-
-
-.back-link {
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-    padding: 15px;
-    font-size: 15px;
-    font: 700;
-    border-radius: 10px;
-    color: #fff;
-    background-color: #333;
-}
-
-
-.back-link:hover {
-    font-size: 18px;
-    text-decoration: underline;
-    transition: 0.7s;
-    background-color: #fff;
-    color: #333;
 }
