--- a/transcriber/templates/transcriber/video_to_audio.html
+++ b/transcriber/templates/transcriber/video_to_audio.html
@@ -10,7 +10,7 @@
 <body>
     <!-- nabvar -->
     <div class="navbar">
-        <a href="#" class="logo">Linguify</a>
+        <a href="/" class="logo"><img src="{% static 'transcriber/img/logo.png' %}" class="img-logo" alt=""></a>
         <div class="nav-links">
             <a href="/">Home</a>
             <a href="{% url "text-to-audio" %}">Convert To Audio</a>
