--- a/transcriber/templates/transcriber/text_to_audio.html
+++ b/transcriber/templates/transcriber/text_to_audio.html
@@ -19,7 +19,7 @@
 <body>
     <!-- nabvar -->
     <div class="navbar">
-        <a href="#" class="logo">Linguify</a>
+        <a href="/" class="logo"><img src="{% static 'transcriber/img/logo.png' %}" class="img-logo" alt=""></a>
         <div class="nav-links">
             <a href="/">Home</a>
             <a href="{% url "audio-to-text" %}">Convert Audio To Text</a>
